--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "glob": "^10.4.1",
+    "magic-string": "^0.30.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "rimraf": "^5.0.7",
     "rollup-plugin-terser": "^7.0.2",
-    "sourcemap-codec": "^1.4.8",
     "svgo": "^3.3.2",
     "web-vitals": "^2.1.4"
   },
