--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/plugin-transform-numeric-separator": "^7.24.7",
     "@babel/plugin-transform-private-methods": "^7.24.7",
     "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@rollup/plugin-terser": "^7.0.2",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -50,7 +51,6 @@
     "node": ">=18.0.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
-    "@rollup/plugin-terser": "^7.0.2"
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7"
   }
 }
