--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "node": ">=18.0.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
-    "rollup-plugin-terser": "^7.0.2"
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7"
   }
 }
