--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node ./node_modules/react-scripts/bin/react-scripts.js start",
-    "build": "CI=false react-scripts build",
+    "start": "react-scripts start",
+    "build": "CI=false react-script build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
